--- a/data/team.yml
+++ b/data/team.yml
@@ -98,7 +98,7 @@ members:
     image: "jeroen.jpg"
     name: Jeroen Zeegers
     teaser: >
-      Cloud Consultant | Tesla hacker | Knows everyone
+      Premium Cloud Consultant | Tesla hacker | Knows everyone
     description: >
       Jeroen has many years of experience designing and building secure, reliable and scalable platforms that are easy to use.
   - category: Engineering
